@@ -1,3 +1,14 @@
+2011-01-16  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
+
+	* include/network/ConcurrentMessageQueue.h: Add try_send and
+	try_receive.
+	* testsuite/testMessagingGateway.cpp: Likewise.
+	* src/network/MessageDispatcher.cpp: Likewise.
+	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
+	* include/network/MessagingGateway.h: Likewise.
+	* include/network/MessageDispatcher.h: Likewise.
+	* include/network/ConcurrentMessageDispatcher.h: Likewise.
+
 2011-01-16  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
 	* include/network/NeighborOut.h: Send header and then message.
